--- a/laravel/dev/styles/main.scss
+++ b/laravel/dev/styles/main.scss
@@ -1,11 +1,17 @@
 $iconSpritePath: '/images/glyphicons-halflings.png';
 @import 'sass-bootstrap/lib/bootstrap';
 
+.main-container {
+    padding-right: 0;
+    padding-left: 0;
+}
+
 ul.engines {
     margin: 0;
 }
 
 .iframe iframe {
     width: 100%;
+    border: none;
 }
 
