--- a/laravel/dev/scripts/modules/ui/engines/templates/engine.hbs
+++ b/laravel/dev/scripts/modules/ui/engines/templates/engine.hbs
@@ -1,2 +1,4 @@
-
+<a href="javascript:void(0)">
+    <img src="http://g.etfv.co/{{ home_url }}" alt="Google" width="16" height="16" />
     {{ name }}
+</a>
