--- a/dev/scripts/modules/ui/engines/templates/engine.hbs
+++ b/dev/scripts/modules/ui/engines/templates/engine.hbs
@@ -1,4 +1,4 @@
 <a href="javascript:void(0)" class="">
-    <img src="http://g.etfv.co/{{ home_url }}" alt="Google" width="16" height="16" />
-    {{ name }}
+    <img src="http://g.etfv.co/{{ home_url }}" alt="{{ name_stripped }}" width="16" height="16" />
+    {{{ name }}}
 </a>
