--- a/dev/scripts/modules/ui/navbar/templates/navbar.hbs
+++ b/dev/scripts/modules/ui/navbar/templates/navbar.hbs
@@ -1,13 +1,10 @@
 <div class="navbar-inner">
     <div class="container-fluid">
-        <a class="brand" href=".">Torrent Engine Searcher</a>
+        <a class="brand" href="javascript:void(0)">
+            Torrent Engine Searcher
+        </a>
         <div class="nav-collapse collapse">
             <ul class="nav">
-                {{#each pages}}
-                    <li>
-                        <a href="javascript:void(0)">{{ name }}</a>
-                    </li>
-                {{/each}}
             </ul>
         </div>
     </div>
