add page ui module based on iframe module add page id to the data state module refactoring iframe module

--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -22,7 +22,7 @@ $iconSpritePath: '/images/glyphicons-halflings.png';
     @include border-radius($baseBorderRadius + 10);
 }
 
-.content {
+.content .iframe-wrapper {
     overflow: hidden;
     line-height: 0;
 }
