add slug for engines and pages add links to engines and pages use / url for home page

--- a/dev/scripts/modules/ui/engines/templates/engine.hbs
+++ b/dev/scripts/modules/ui/engines/templates/engine.hbs
@@ -1,4 +1,4 @@
-<a href="javascript:void(0)" class="">
+<a href="/engine/{{ slug }}">
     <img src="http://g.etfv.co/{{ home_url }}" alt="{{ name_stripped }}" width="16" height="16" />
     {{{ name }}}
 </a>
