--- a/dev/scripts/modules/ui/categories/templates/category.hbs
+++ b/dev/scripts/modules/ui/categories/templates/category.hbs
@@ -1,3 +1,3 @@
-<a href="/category/{{ slug }}">
-    {{ name }}
+<a href="/engine/{{ engine.slug }}/category/{{ category.slug }}">
+    {{ category.name }}
 </a>
