integrate add this

--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -36,3 +36,7 @@ $iconSpritePath: '/images/glyphicons-halflings.png';
     overflow: auto;
 }
 
+.content .page-wrapper {
+    padding-right: 40px;
+}
+
