--- a/dev/scripts/modules/ui/page/templates/page.hbs
+++ b/dev/scripts/modules/ui/page/templates/page.hbs
@@ -1,8 +1,10 @@
 <div class="container-fluid">
-    <h1>
-        {{ title }}
-    </h1>
-    <div>
-        {{{ content }}}
+    <div class="page-wrapper">
+        <h1>
+            {{ title }}
+        </h1>
+        <div>
+            {{{ content }}}
+        </div>
     </div>
 </div>
