add controls ui module

--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -47,3 +47,9 @@ $iconSpritePath: '/images/glyphicons-halflings.png';
 #_atssh {
     top: 0;
 }
+
+.controls {
+    position: absolute;
+    right: 0;
+    padding: 5px;
+}
