replace main-container class with app-container and adding app-row class

--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -1,7 +1,7 @@
 $iconSpritePath: '/images/glyphicons-halflings.png';
 @import 'sass-bootstrap/lib/bootstrap';
 
-.main-container {
+.app-container {
     padding-right: 0;
     padding-left: 0;
 }
