--- a/dev/scripts/modules/ui/available-engines/templates/engines.hbs
+++ b/dev/scripts/modules/ui/available-engines/templates/engines.hbs
@@ -1,2 +1,12 @@
-<ul class="nav nav-list">
-</li>
+<div class="row-fluid">
+    <h1>Available BitTorrent Search Engines</h1>
+    <p>
+        Coming soon...
+    </p>
+</div>
+<div class="row-fluid">
+    <ul class="column-1 span3 nav nav-list"></ul>
+    <ul class="column-2 span3 nav nav-list"></ul>
+    <ul class="column-3 span3 nav nav-list"></ul>
+    <ul class="column-4 span3 nav nav-list"></ul>
+</div>
