add inuvo banner

--- a/dev/scripts/modules/ui/page/templates/page.hbs
+++ b/dev/scripts/modules/ui/page/templates/page.hbs
@@ -3,6 +3,9 @@
         <h1>
             {{ title }}
         </h1>
+        <div class="well text-center">
+            <a href="http://tracking.inuvo.com/c/AABXAEUABgAAfDxip%7EspEQ%3D%3D?subid1=&subid2=&subid3="><img src="http://tracking.inuvo.com/i/AABXAEUABgAAMjwTp%7EsIyw%3D%3D?subid1=&subid2=&subid3="></a>
+        </div>
         <div>
             {{{ content }}}
         </div>
