rename available engines to engines

--- a/dev/scripts/modules/ui/engines/templates/engines.hbs
+++ b/dev/scripts/modules/ui/engines/templates/engines.hbs
@@ -1,7 +1,7 @@
 <div class="row-fluid">
-    <h1>Available BitTorrent Search Engines</h1>
+    <h1>All BitTorrent Search Engines</h1>
     <p>
-        Coming soon...
+        Add / Remove engine is coming soon...
     </p>
 </div>
 <div class="row-fluid">
