--- a/dev/scripts/modules/ui/pages/templates/engines-item.hbs
+++ b/dev/scripts/modules/ui/pages/templates/engines-item.hbs
@@ -1,3 +1,3 @@
-<a href="available-engines">
-    Available Engines <span class="label label-important">new</span>
+<a href="/engines">
+    Engines
 </a>
