--- a/dev/scripts/modules/ui/engines/templates/engines.hbs
+++ b/dev/scripts/modules/ui/engines/templates/engines.hbs
@@ -1,10 +1,14 @@
 <div class="row-fluid">
     <h1>All BitTorrent Search Engines</h1>
     <p>
-        Add / Remove engine is coming soon...
+        You can now <strong>sort</strong> your torrent engines list.
+        Also you can <strong>drag &amp; drop</strong> engines to <strong>add</strong> or <strong>remove</strong> engine from available torrent search engines to your favorite list.
+    </p>
+    <p>
+        Comming soon engines groups ...
     </p>
 </div>
-<div class="row-fluid">
+<div class="droppable row-fluid">
     <ul class="column-1 span3 nav nav-list"></ul>
     <ul class="column-2 span3 nav nav-list"></ul>
     <ul class="column-3 span3 nav nav-list"></ul>
