add groups data module and modify engines ui module to group engines by type

--- a/dev/scripts/modules/ui/engines/templates/engines.hbs
+++ b/dev/scripts/modules/ui/engines/templates/engines.hbs
@@ -1,16 +1,15 @@
-<div class="row-fluid">
-    <h1>All BitTorrent Search Engines</h1>
-    <p>
-        You can now <strong>sort</strong> your torrent engines list.
-        Also you can <strong>drag &amp; drop</strong> engines to <strong>add</strong> or <strong>remove</strong> engine from available torrent search engines to your favorite list.
-    </p>
-    <p>
-        Comming soon engines groups ...
-    </p>
-</div>
-<div class="droppable row-fluid">
-    <ul class="column-1 span3 nav nav-list"></ul>
-    <ul class="column-2 span3 nav nav-list"></ul>
-    <ul class="column-3 span3 nav nav-list"></ul>
-    <ul class="column-4 span3 nav nav-list"></ul>
+<div class="container-fluid">
+    <div class="row-fluid">
+        <h1>All BitTorrent Search Engines</h1>
+        <p>
+            You can now <strong>sort</strong> your torrent engines list.
+            Also you can <strong>drag &amp; drop</strong> engines to <strong>add</strong> or <strong>remove</strong> engine from available torrent search engines to your favorite list.
+        </p>
+        <p class="alert alert-info">Engines and sites grouped by type</p>
+    </div>
+    <div class="groups droppable">
+        <!--Groups content-->
+    </div>
+    <br>
+    <p class="alert alert-success">That's it. Thank you for scrolling here :-) we apreciate it.</p>
 </div>
