decouple navbar from pages module

--- a/dev/scripts/modules/ui/navbar/templates/navbar.hbs
+++ b/dev/scripts/modules/ui/navbar/templates/navbar.hbs
@@ -1,6 +1,7 @@
 <div class="container-fluid">
+    <a href="/" class="brand">
+        Torrent Engine Searcher
+    </a>
     <div class="nav-collapse collapse">
-        <ul class="nav">
-        </ul>
     </div>
 </div>
