add ui groups module

--- a/dev/scripts/modules/ui/engines/templates/engines.hbs
+++ b/dev/scripts/modules/ui/engines/templates/engines.hbs
@@ -1,15 +1,19 @@
 <div class="container-fluid">
-    <div class="row-fluid">
-        <h1>All BitTorrent Search Engines</h1>
-        <p>
-            You can now <strong>sort</strong> your torrent engines list.
-            Also you can <strong>drag &amp; drop</strong> engines to <strong>add</strong> or <strong>remove</strong> engine from available torrent search engines to your favorite list.
-        </p>
-        <p class="alert alert-info">Engines and sites grouped by type</p>
-    </div>
+    {{#unless active_group}}
+        <div class="row-fluid">
+            <h1>All BitTorrent Search Engines</h1>
+            <p>
+                You can now <strong>sort</strong> your torrent engines list.
+                Also you can <strong>drag &amp; drop</strong> engines to <strong>add</strong> or <strong>remove</strong> engine from available torrent search engines to your favorite list.
+            </p>
+            <p class="alert alert-info">Engines and sites grouped by type</p>
+        </div>
+    {{/unless}}
     <div class="groups droppable">
         <!--Groups content-->
     </div>
     <br>
-    <p class="alert alert-success">That's it. Thank you for scrolling here :-) we apreciate it.</p>
+    {{#unless active_group}}
+        <p class="alert alert-success">That's it. Thank you for scrolling here :-) we apreciate it.</p>
+    {{/unless}}
 </div>
