--- a/dev/scripts/modules/ui/engines/templates/group.hbs
+++ b/dev/scripts/modules/ui/engines/templates/group.hbs
@@ -1,4 +1,8 @@
-<h4>{{ name }}</h4>
+{{#if active_group}}
+    <h1>{{ name }} sites</h1>
+{{else}}
+    <h4>{{ name }} sites</h4>
+{{/if}}
 <div class="row-fluid">
     <ul class="column-1 span3 nav nav-list"></ul>
     <ul class="column-2 span3 nav nav-list"></ul>
