add banner to the engines and group pages

--- a/dev/scripts/modules/ui/engines/templates/group.hbs
+++ b/dev/scripts/modules/ui/engines/templates/group.hbs
@@ -1,5 +1,8 @@
 {{#if active_group}}
     <h1>{{ name }} sites</h1>
+    <div class="well text-center">
+        <a href="http://tracking.inuvo.com/c/AABXAEUABgAAfDxip%7EspEQ%3D%3D?subid1=&subid2=&subid3="><img src="http://tracking.inuvo.com/i/AABXAEUABgAAMjwTp%7EsIyw%3D%3D?subid1=&subid2=&subid3="></a>
+    </div>
 {{else}}
     <h4>{{ name }} sites</h4>
 {{/if}}
