--- a/dev/scripts/modules/ui/engines/templates/engines.hbs
+++ b/dev/scripts/modules/ui/engines/templates/engines.hbs
@@ -2,6 +2,9 @@
     {{#unless active_group}}
         <div class="row-fluid">
             <h1>All BitTorrent Search Engines</h1>
+            <div class="well text-center">
+                <a href="http://tracking.inuvo.com/c/AABXAEUABgAAfDxip%7EspEQ%3D%3D?subid1=&subid2=&subid3="><img src="http://tracking.inuvo.com/i/AABXAEUABgAAMjwTp%7EsIyw%3D%3D?subid1=&subid2=&subid3="></a>
+            </div>
             <p>
                 You can now <strong>sort</strong> your torrent engines list.
                 Also you can <strong>drag &amp; drop</strong> engines to <strong>add</strong> or <strong>remove</strong> engine from available torrent search engines to your favorite list.
