--- a/dev/scripts/modules/ui/engines/templates/engines.hbs
+++ b/dev/scripts/modules/ui/engines/templates/engines.hbs
@@ -3,7 +3,7 @@
         <div class="row-fluid">
             <h1>All BitTorrent Search Engines</h1>
             <div class="well text-center">
-                <a href="http://tracking.inuvo.com/c/AABXAEUABgAAfDxip%7EspEQ%3D%3D?subid1=&subid2=&subid3="><img src="http://tracking.inuvo.com/i/AABXAEUABgAAMjwTp%7EsIyw%3D%3D?subid1=&subid2=&subid3="></a>
+                <a href="http://tracking.inuvo.com/c/AABXAEUACwAA8UYpr%7E0xxQ%3D%3D?subid1=&subid2=&subid3="><img src="http://tracking.inuvo.com/i/AABXAEUACwAAuEZLr%7E0wLA%3D%3D?subid1=&subid2=&subid3="></a>
             </div>
             <p>
                 You can now <strong>sort</strong> your torrent engines list.
