add ui sites module

--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -32,7 +32,7 @@ $iconSpritePath: '/images/glyphicons-halflings.png';
     border: none;
 }
 
-.page, .engines {
+.page, .engines, .sites {
     overflow: auto;
 }
 
