--- a/dev/scripts/modules/ui/sites/templates/site.hbs
+++ b/dev/scripts/modules/ui/sites/templates/site.hbs
@@ -1,4 +1,4 @@
-<a href="/site/{{ slug }}">
+<a href="/sites/{{ group.slug }}/{{ slug }}">
     <img src="http://g.etfv.co/{{ home_url }}" alt="{{ name_stripped }}" class="icon" />
     {{{ name }}}
 </a>
