--- a/dev/scripts/modules/ui/sites/templates/sites.hbs
+++ b/dev/scripts/modules/ui/sites/templates/sites.hbs
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    {{#unless active_group}}
+    {{#unless group}}
         <div class="row-fluid">
             <h1>File Sharing Sites</h1>
             <div class="well text-center">
