--- a/dev/scripts/modules/ui/page/templates/page.hbs
+++ b/dev/scripts/modules/ui/page/templates/page.hbs
@@ -3,9 +3,7 @@
         <h1>
             {{ title }}
         </h1>
-        <div class="well text-center">
-            <a href="http://tracking.inuvo.com/c/AABXAEUACwAA8UYpr%7E0xxQ%3D%3D?subid1=&subid2=&subid3="><img src="http://tracking.inuvo.com/i/AABXAEUACwAAuEZLr%7E0wLA%3D%3D?subid1=&subid2=&subid3="></a>
-        </div>
+        {{> templates_ads_banner}}
         <div>
             {{{ content }}}
         </div>
