--- a/dev/scripts/modules/ui/site/templates/site.hbs
+++ b/dev/scripts/modules/ui/site/templates/site.hbs
@@ -2,9 +2,7 @@
     <h1>
         {{{ name }}}
     </h1>
-    <div class="well text-center">
-        <a href="http://tracking.inuvo.com/c/AABXAEUACwAA8UYpr%7E0xxQ%3D%3D?subid1=&subid2=&subid3="><img src="http://tracking.inuvo.com/i/AABXAEUACwAAuEZLr%7E0wLA%3D%3D?subid1=&subid2=&subid3="></a>
-    </div>
+    {{> templates_ads_banner}}
     <p class="alert alert-info">
         More details and information about <strong>{{{ name }}}</strong> coming soon...
     </p>
