--- a/dev/scripts/modules/ui/sites/templates/sites.hbs
+++ b/dev/scripts/modules/ui/sites/templates/sites.hbs
@@ -2,9 +2,7 @@
     {{#unless group}}
         <div class="row-fluid">
             <h1>File Sharing Sites</h1>
-            <div class="well text-center">
-                <a href="http://tracking.inuvo.com/c/AABXAEUACwAA8UYpr%7E0xxQ%3D%3D?subid1=&subid2=&subid3="><img src="http://tracking.inuvo.com/i/AABXAEUACwAAuEZLr%7E0wLA%3D%3D?subid1=&subid2=&subid3="></a>
-            </div>
+            {{> templates_ads_banner}}
         </div>
     {{/unless}}
     <div class="groups">
