move sidebar padding top to header margin bottom remove padding bottom from sidebar replace .header height with outer height for window resizing

--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -6,8 +6,12 @@ $iconSpritePath: '/images/glyphicons-halflings.png';
     padding-left: 0;
 }
 
+.header {
+    margin-bottom: 10px;
+}
+
 .sidebar {
-    padding: 5px 0 5px 5px;
+    padding-left: 10px;
 }
 
 .user-engines {
