--- a/dev/scripts/modules/ui/pages/templates/item.hbs
+++ b/dev/scripts/modules/ui/pages/templates/item.hbs
@@ -1,3 +1,3 @@
-<a href="{{#if is_home_page }}/{{/if}}{{#if is_custom}}{{ route }}{{else}}/page/{{ slug }}{{/if}}">
+<a href="{{#if is_home_page }}/{{/if}}{{#if is_custom}}/{{ route }}{{else}}/page/{{ slug }}{{/if}}">
     {{ name }}
 </a>
