wrap breadcrumbs component into ui controller and add feature to open route by clicking link

--- a/dev/scripts/components/breadcrumbs/templates/item.hbs
+++ b/dev/scripts/components/breadcrumbs/templates/item.hbs
@@ -1,5 +1,5 @@
 {{#if is_active}}
     {{{ name }}}
 {{else}}
-    <a href="{{url}}">{{{ name }}}</a> <span class="divider">/</span>
+    <a href="/{{route}}">{{{ name }}}</a> <span class="divider">/</span>
 {{/if}}
