--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -6,24 +6,28 @@ $iconSpritePath: '/images/glyphicons-halflings.png';
     padding-left: 0;
 }
 
-.header {
-    margin-bottom: 10px;
-}
-
 .sidebar {
     padding-left: 10px;
+}
+
+.search {
+    margin-top: 10px;
 }
 
 .user-engines {
     overflow: auto;
 }
 
-.user-engines li {
-    padding: 5px 0 0 0;
+.user-engines, .engines, .sites {
+    li {
+        padding: 5px 0 0 0;
+    }
 }
 
-.user-engines li a, .engines li a {
-    @include border-radius($baseBorderRadius + 10);
+.user-engines, .engines, .sites {
+    li a {
+        @include border-radius($baseBorderRadius + 10);
+    }
 }
 
 .iframe-wrapper {
@@ -31,13 +35,17 @@ $iconSpritePath: '/images/glyphicons-halflings.png';
     line-height: 0;
 }
 
-.iframe-wrapper iframe {
-    width: 100%;
-    border: none;
+.iframe-wrapper {
+    iframe {
+        width: 100%;
+        border: none;
+    }
 }
 
-.page, .engines, .sites {
+.page, .engines, .sites, .site {
     overflow: auto;
+    padding-top: 10px;
+    @include box-sizing(border-box);
 }
 
 .addthis {
