replace active_group with just group

--- a/dev/scripts/modules/ui/engines/templates/engines.hbs
+++ b/dev/scripts/modules/ui/engines/templates/engines.hbs
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    {{#unless active_group}}
+    {{#unless group}}
         <div class="row-fluid">
             <h1>All BitTorrent Search Engines</h1>
             {{> templates_ads_banner}}
