remove on scroll position saving and changed a bit text for engines ui module

--- a/dev/scripts/modules/ui/engines/templates/engines.hbs
+++ b/dev/scripts/modules/ui/engines/templates/engines.hbs
@@ -3,10 +3,12 @@
         <h1>All BitTorrent Search Engines</h1>
         {{> templates_ads_banner}}
         <p>
-            You can now <strong>sort</strong> your torrent engines list.
-            Also you can <strong>drag &amp; drop</strong> engines to <strong>add</strong> or <strong>remove</strong> engine from available torrent search engines to your favorite list.
+            All BitTorrent Search Engines are grouped by type and you can use them to search torrents.
         </p>
-        <p class="alert alert-info">Engines and sites grouped by type</p>
+        <p class="alert alert-info">
+            You can <strong>sort</strong> your torrent engines list.
+            Also you can <strong>drag &amp; drop</strong> engines to <strong>add</strong> or <strong>remove</strong> items from <strong>Engines</strong> list to your favorite list (on the left side bar).
+        </p>
     </div>
 {{/unless}}
 <div class="groups droppable">
