--- a/dev/scripts/modules/ui/recent-searches/templates/item.hbs
+++ b/dev/scripts/modules/ui/recent-searches/templates/item.hbs
@@ -1,4 +1,4 @@
+<small><i>{{ from_now }}</i></small> -
 <a href="/engine/{{ engine.slug }}/search/{{ query }}">
     {{ query }}
 </a>
-- {{ from_now }}
