--- a/dev/scripts/templates/ads/banner.hbs
+++ b/dev/scripts/templates/ads/banner.hbs
@@ -1,3 +1,3 @@
 <div class="well text-center">
-    <a href="http://tracking.inuvo.com/c/AABXAEUACQAAuD5L%7EyswLA%3D%3D?subid1=&subid2=&subid3="><img src="http://tracking.inuvo.com/i/AABXAEUACQAA1j6e%7Eysf1A%3D%3D?subid1=&subid2=&subid3="></a>
+    <a href="http://tracking.inuvo.com/c/AABXAEUABAAA8Rwps%7EkxxQ%3D%3D?subid1=&subid2=&subid3="><img src="http://tracking.inuvo.com/i/AABXAEUABAAAuBxLs%7EkwLA%3D%3D?subid1=&subid2=&subid3="></a>
 </div>
