--- a/dev/scripts/templates/ads/banner.hbs
+++ b/dev/scripts/templates/ads/banner.hbs
@@ -1,3 +1,1 @@
-<div class="well text-center">
-    <a href="http://tracking.inuvo.com/c/AABXAEUABAAA8Rwps%7EkxxQ%3D%3D?subid1=&subid2=&subid3="><img src="http://tracking.inuvo.com/i/AABXAEUABAAAuBxLs%7EkwLA%3D%3D?subid1=&subid2=&subid3="></a>
-</div>
+<iframe src="/ads.html" width="100%" height="270" frameborder="0"></iframe>
